Removed refactoring to simplify PR